# accompany-calc

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Navigation.tsx
src/lib/: db.ts  init-db.ts  push.ts  theme.ts
src/pages/: DepositManager.tsx  IncomeStats.tsx  PersonalCalc.tsx  PlatformCalc.tsx  Settings.tsx
